<resources>
    <string name="app_name">ERP</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="get_code">验证码</string>
    <string name="input_check_code">输入验证码</string>
    <string name="phone_num">手机号</string>
    <string name="submit">提交</string>
    <string name="password">密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="newpassword">设置新密码</string>
    <string name="forget_password_tips">如果您忘记了你的密码，可以通过手机号找回</string>
    <string name="please_input">请填写</string>
    <string name="please_select">请选择</string>
    <string name="no_account">还没有账号?&#160;&#160;&#160;&#160;立即注册</string>
    <string name="has_account">已有账号?&#160;&#160;&#160;&#160;立即登录</string>
    <string name="nav_bottom_home">概览</string>
    <string name="nav_bottom_goods">商品</string>
    <string name="nav_bottom_sale">销售</string>
    <string name="nav_bottom_statistics">统计</string>
    <string name="nav_bottom_more">更多</string>
    <string name="no_chart_data">还没有相关数据~</string>
    <string name="network_not_well">您的网络不稳定，请刷新重试～</string>
    <string name="network_err">网络错误</string>
    <string name="refresh">刷新</string>
    <string name="loginfiu">登录</string>
    <string name="registerfiu">注册</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="statistics_title">统计</string>
    <string name="user_manage_title">客户</string>
    <string name="add_customer">添加客户</string>
    <string name="add_customer_title">新增客户</string>
    <string name="save">保存</string>
    <string name="basic_info">基本信息</string>
    <string name="address_info">地址信息</string>
    <string name="expand_info">扩展信息</string>
    <string name="custom_name">客户名称</string>
    <string name="custom_contact">联系人</string>
    <string name="custom_phone">手机</string>
    <string name="custom_class">分类</string>
    <string name="custom_tel">电话</string>
    <string name="custom_mail">邮箱</string>
    <string name="custom_gender">性别</string>
    <string name="custom_birth">生日</string>
    <string name="custom_province">省市</string>
    <string name="custom_city">城市</string>
    <string name="custom_county">区县</string>
    <string name="custom_detail_addr">详细地址</string>
    <string name="custom_comment">备注</string>
    <string name="custom_fox">传真</string>
    <string name="custom_on">启用</string>
    <string name="item_on">启用</string>
    <string name="select_class_title">选择分类</string>
    <string name="confirm">确认</string>
    <string name="input_username">请输入客户名</string>
    <string name="input_phone">请输入手机号</string>
    <string name="submit_success">提交成功</string>
    <string name="all_money">合计: </string>
    <string name="submit_order">提交订单</string>
    <string name="dx_order_title">代下单</string>
    <string name="select_customer_title">选择客户</string>
    <string name="select_goods_title">选择商品</string>
    <string name="add_order_success">订单创建成功</string>
    <string name="create_order_title">创建订单</string>
    <string name="add_new_address">新增地址</string>
    <string name="select_address_title">选择地址</string>
    <string name="default_address">默认地址</string>
    <string name="set_address">请添加地址</string>
    <string name="new_consignee_address">新增地址</string>
    <string name="edit_address">编辑地址</string>
    <string name="delete">删除</string>
    <string name="hint_dialog_delete_address_title">确认删除地址？</string>
    <string name="consignee_name">请输入姓名</string>
    <string name="phone">请输入手机号</string>
    <string name="postcode">请输入邮编</string>
    <string name="please_select_address">请选择收货地址</string>
    <string name="detail_address">详细地址</string>
    <string name="set_default_address">设为默认地址</string>
    <string name="name_is_empty">请输入收货人</string>
    <string name="phone_is_empty">请输入手机号</string>
    <string name="phone_is_err">请输入正确手机号</string>
    <string name="address_details_is_empty">请输入详细地址</string>

    <!-- 图片选择器 -->
    <string name="l_album_name_all">最近图片</string>
    <string name="l_album_name_selected">选择图片</string>
    <string name="l_album_name_camera">相机</string>
    <string name="l_album_name_download">下载</string>
    <string name="l_album_name_screen_shot">屏幕截图</string>
    <string name="close">关闭</string>
    <string name="cancel">取消</string>

    <string name="manage_address">管理地址</string>
    <string name="manage_address_title">管理地址</string>
    <string name="inventory">库存</string>
    <string name="color_category">颜色分类</string>
    <string name="default_txt">颜色分类</string>
    <string name="default_color">默认</string>
    <string name="qr_scan_tips">将二维码/条码放入框内，即可自动扫描</string>
    <string name="actionbar_title_qr_scan">二维码/条码</string>
    <string name="loading">加载中…</string>
    <string name="hint_dialog_open_camera_fail_content">相机打开出错，请稍后重试</string>
    <string name="hint_dialog_scan_success_title">扫描成功，是否进行网页登陆</string>
    <string name="tvSpecification">规格</string>
    <string name="address">地址</string>
    <string name="manage_grade">管理</string>
    <string name="input_grade_name">请输入客户等级</string>
    <string name="add_customer_grade">新增分类</string>
    <string name="manage_class_title">管理分类</string>
    <string name="edit_customer_grade">编辑分类</string>
    <string name="hint_dialog_delete_grade_title">确认删除分类？</string>
    <string name="add_goods_title">添加商品</string>
    <string name="edit_customer_title">编辑客户</string>
    <string name="manage_customer">管理</string>
    <string name="manage_customer_title">管理客户</string>
    <string name="hint_dialog_delete_customer_title">确认删除该客户吗？</string>

    <string name="input_hint">发送消息</string>
    <string name="message_click_hint">点击消息事件</string>
    <string name="message_long_click_hint">长按消息事件</string>
    <string name="avatar_click_hint">头像点击事件</string>

    <string name="rationale_record_voice">需要获取麦克风权限来录音</string>
    <string name="rationale_photo">需要获取相册权限</string>
    <string name="rationale_camera">需要获取相机权限</string>
    <string name="rationale_external_storage">需要获取相机权限</string>
    <string name="custom_main_menu_title">自定义主页</string>
    <string name="title_today_sale_money">今天销售额</string>
    <string name="title_7day_sale_money">7天销售额</string>
    <string name="title_30day_sale_money">30天销售额</string>
    <string name="title_statistics_goods_classify">商品分类</string>
    <string name="title_statistics_brand_classify">品牌分类</string>
    <string name="title_stock_cost">库存成本</string>
    <string name="title_stock_amount">库存总数</string>
    <string name="title_stock_warn">库存预警数</string>
    <string name="title_statistics_stock">仓库统计</string>
    <string name="title_statistics_customer_grade">客户级别</string>
    <string name="title_statistics_customer_area">客户地域分布</string>

    <string-array name="messages_array">
        <item>How are you</item>
        <item>Fine. And you?</item>
        <item>Me, too. Is there any news today?</item>
        <item>Yep! I got a news here: boom! Tomorrow is the end of The Walking Dead!</item>
        <item>Are you kidding me?</item>
        <item>Absolutely not!</item>
        <item>Jesus, that\'s crazy</item>
        <item>I thought no one would gonna to make it</item>
        <item>That\'s cruel, I don\'t like it, maybe there is a favourable turn</item>
        <item>Hope so</item>
    </string-array>

    <string-array name="conversation">
        <item>test</item>
        <item>History message 1</item>
        <item>History message 2</item>
        <item>History message 3</item>
        <item>History message 4</item>
        <item>History message 5</item>
        <item>History message 6</item>
        <item>History message 7</item>
        <item>History message 8</item>
        <item>History message 9</item>
        <item>History message 10</item>
    </string-array>
</resources>
