<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f8f8f8"
    android:fitsSystemWindows="true">

    <com.thn.erp.view.CustomHeadView
        android:id="@+id/customHeadView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/customHeadView"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dp15"
        android:paddingRight="@dimen/dp15">

        <EditText
            android:id="@+id/et_consignee_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp35"
            android:layout_marginTop="@dimen/dp15"
            android:background="@drawable/background_product_white_corner"
            android:hint="@string/consignee_name"
            android:maxLines="1"
            android:paddingLeft="@dimen/dp10"
            android:textColor="@color/color_222"
            android:textSize="@dimen/sp14" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp35"
            android:layout_marginTop="@dimen/dp10"
            android:background="@drawable/background_product_white_corner"
            android:hint="@string/phone"
            android:inputType="phone"
            android:maxLines="1"
            android:paddingLeft="@dimen/dp10"
            android:textSize="@dimen/sp14" />

        <EditText
            android:id="@+id/et_zip_code"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp35"
            android:layout_marginTop="@dimen/dp10"
            android:background="@drawable/background_product_white_corner"
            android:hint="@string/postcode"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="@color/color_222"
            android:paddingLeft="@dimen/dp10"
            android:textSize="@dimen/sp14" />

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp35"
            android:layout_marginTop="@dimen/dp10"
            android:background="@drawable/background_product_white_corner"
            android:paddingLeft="@dimen/dp10"
            android:hint="@string/please_select_address"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:textColor="@color/color_222"
            android:textSize="@dimen/sp14" />

        <EditText
            android:id="@+id/et_address_details"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp35"
            android:layout_marginTop="@dimen/dp10"
            android:background="@drawable/background_product_white_corner"
            android:hint="@string/detail_address"
            android:maxLines="1"
            android:textColor="@color/color_222"
            android:paddingLeft="@dimen/dp10"
            android:textSize="@dimen/sp14" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp35"
            android:layout_marginTop="@dimen/dp10"
            android:background="@drawable/background_product_white_corner"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_default_address"
                android:paddingLeft="@dimen/dp15"
                android:textColor="@color/color_222"
                android:layout_centerVertical="true"
                android:textSize="@dimen/sp15"
                />
            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switchCompat"
                android:switchMinWidth="40dp"
                android:theme="@style/mySwitch"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>