<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_f8f8f8"
    >
    <com.thn.erp.view.CustomHeadView
        android:id="@+id/customHeadView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forget_password_tips"
        android:textSize="@dimen/sp14"
        android:gravity="center_horizontal"
        android:textColor="@color/color_222"
        android:layout_marginTop="@dimen/dp20"
        android:layout_marginBottom="@dimen/dp15"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp44"
        android:background="@drawable/border_radius2_ddd"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/dp15"
        android:layout_marginRight="@dimen/dp15"
        >

        <ImageView
            android:layout_width="@dimen/dp20"
            android:layout_height="@dimen/dp20"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_marginRight="@dimen/dp10"
            android:src="@mipmap/icon_user_account" />

        <EditText
            android:id="@+id/et_phone_reg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="left|center_vertical"
            android:hint="@string/phone_num"
            android:inputType="number"
            android:maxLength="50"
            android:maxLines="1"
            android:textColor="@color/color_666"
            android:textColorHint="@color/color_999"
            android:textSize="@dimen/sp14" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp44"
        android:layout_marginTop="@dimen/dp15"
        android:layout_marginLeft="@dimen/dp15"
        android:layout_marginRight="@dimen/dp15"
        >

        <ImageView
            android:layout_width="@dimen/dp20"
            android:layout_height="@dimen/dp20"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp10"
            android:layout_toLeftOf="@+id/rl_code"
            android:layout_toStartOf="@+id/rl_code"
            android:src="@mipmap/icon_password"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp44"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_radius2_ddd"
                android:gravity="left|center_vertical"
                android:hint="@string/input_check_code"
                android:inputType="text"
                android:maxLength="10"
                android:maxLines="1"
                android:paddingLeft="@dimen/dp10"
                android:textColor="@color/color_666"
                android:textColorHint="@color/color_999"
                android:textSize="@dimen/sp14" />

            <Button
                android:id="@+id/btnCheckCode"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="@dimen/dp70"
                android:layout_height="match_parent"
                android:background="@drawable/shape_button_checkcode"
                android:text="@string/get_code"
                android:textColor="@color/color_666"
                android:textSize="@dimen/sp14" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp44"
        android:layout_marginTop="@dimen/dp15"
        android:background="@drawable/border_radius2_ddd"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/dp15"
        android:layout_marginRight="@dimen/dp15"
        >

        <ImageView
            android:layout_width="@dimen/dp20"
            android:layout_height="@dimen/dp20"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_marginRight="@dimen/dp10"
            android:src="@mipmap/icon_password" />

        <EditText
            android:id="@+id/et_password_reg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="@null"
            android:gravity="left|center_vertical"
            android:hint="@string/newpassword"
            android:inputType="textPassword"
            android:maxLength="30"
            android:maxLines="1"
            android:textColor="@color/color_666"
            android:textColorHint="@color/color_999"
            android:textSize="@dimen/sp14" />
    </LinearLayout>


    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp44"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_marginLeft="@dimen/dp15"
        android:layout_marginRight="@dimen/dp15"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp15"
        android:background="@drawable/border_radius2_be8914"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp17" />
</LinearLayout>