<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_login"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/dp15"
    android:paddingRight="@dimen/dp15"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp44"
        android:background="@drawable/border_radius2_ddd"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp5"
        >

        <ImageView
            android:layout_width="@dimen/dp20"
            android:layout_height="@dimen/dp20"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_marginRight="@dimen/dp10"
            android:src="@mipmap/icon_user_account"
            android:layout_gravity="center_vertical"
            />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="left|center_vertical"
            android:hint="@string/phone_num"
            android:inputType="number"
            android:text="1059232202@qq.com"
            android:maxLength="30"
            android:maxLines="1"
            android:textColor="@color/color_666"
            android:textColorHint="@color/color_999"
            android:textSize="@dimen/sp14" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp44"
        android:layout_marginTop="@dimen/dp15"
        android:background="@drawable/border_radius2_ddd"
        android:paddingLeft="@dimen/dp5"
        >

        <ImageView
            android:layout_width="@dimen/dp20"
            android:layout_height="@dimen/dp20"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_marginRight="@dimen/dp10"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/icon_password"
            />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:background="@null"
            android:gravity="left|center_vertical"
            android:hint="@string/password"
            android:text="111111"
            android:inputType="textPassword"
            android:maxLength="30"
            android:maxLines="1"
            android:textColor="@color/color_666"
            android:textColorHint="@color/color_999"
            android:textSize="@dimen/sp14" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_forget_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp10"
        android:gravity="right"
        android:text="@string/forget_password"
        android:textColor="@color/color_666"
        android:textSize="@dimen/sp12"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/btn_login"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_height="@dimen/dp44"
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp15"
        android:background="@drawable/border_radius2_be8914"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp17" />
</LinearLayout>