<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >

    <FrameLayout
        android:id="@+id/activity_main_fragment_group"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/dp48"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:id="@+id/activity_main_bottomlinear"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp48"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_nav0"
            style="@style/MainButtonStyle">

            <ImageView
                android:id="@+id/image0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/tv_nav0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:gravity="center_horizontal"
                android:text="@string/nav_bottom_home"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp10" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_nav1"
            style="@style/MainButtonStyle">

            <ImageView
                android:id="@+id/image1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/tv_nav1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:gravity="center_horizontal"
                android:text="@string/nav_bottom_goods"
                android:textSize="@dimen/sp10" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_nav2"
            style="@style/MainButtonStyle">

            <ImageView
                android:id="@+id/image2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/tv_nav2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:gravity="center_horizontal"
                android:text="@string/nav_bottom_sale"
                android:textSize="@dimen/sp10" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_nav3"
            style="@style/MainButtonStyle">



            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/image3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:id="@+id/tv_msg_indicator"
                    android:layout_width="@dimen/dp8"
                    android:layout_height="@dimen/dp8"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/dp20"
                    android:visibility="gone" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_nav3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:gravity="center_horizontal"
                android:text="@string/nav_bottom_statistics"
                android:textSize="@dimen/sp10" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_nav4"
            style="@style/MainButtonStyle">



            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/image4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:layout_width="@dimen/dp8"
                    android:layout_height="@dimen/dp8"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/dp20"
                    android:visibility="gone" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_nav4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:gravity="center_horizontal"
                android:text="@string/nav_bottom_more"
                android:textSize="@dimen/sp10" />
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_above="@+id/activity_main_bottomlinear"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp05"
        android:background="@color/color_eee"
        />
</RelativeLayout>
